syntax = "proto3";

option java_multiple_files = true;
option java_package = "com.reactive.product.module.product.grpc.dto";
option java_outer_classname = "ProductProto";

package product;

message ValidationError {
  string field = 1;
  string message = 2;
}
message ErrorResponse {
  string errorMsg = 1;
  repeated ValidationError errors = 2;
}
message ProductResponse {
  int64 id = 1;
  string name = 2;
  string category = 3;
  string price = 4;
}
message EmptyResponse {}

message CreateProductRequest {
  string name = 1;
  string category = 2;
  int32 quantity = 3;
  string price = 4;
}
message GetByIdRequest {
  int64 id = 1;
}
message CreateOrderRequest {
  int64 productId = 1;
  int32 quantity = 2;
  string price = 3;
}

service ProductService {
  rpc CreateProduct(CreateProductRequest) returns (ProductResponse);
  rpc GetProductById(GetByIdRequest) returns (ProductResponse);
  rpc CreateOrder(CreateOrderRequest) returns (EmptyResponse);
}